gRPC auth and update user
